update flash banner

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "dswip-pos",
+  "name": "geelaboba",
   "private": true,
   "version": "1.0.0",
-  "description": "Dswip POS",
+  "description": "GeelaBoba",
   "repository": "",
   "license": "UNLICENSED",
   "scripts": {
