--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Dswip POS",
-  "short_name": "Dswip POS",
-  "description": "Dswip POS",
+  "name": "GeelaBoba",
+  "short_name": "GeelaBoba",
+  "description": "GeelaBoba",
   "lang": "en-US",
   "start_url": "/",
   "display": "standalone",
